--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,8 +42,17 @@ header .row {
 main {
   padding-top: 33px;
 }
+h1 {
+  font-size: 24px;
+  margin: 12px 0;
+}
 h2 {
-  font-size: 21px;
+  font-size: 17px;
+  margin: 10px 0;
+}
+p {
+  font-size: 17px;
+  margin: 16px 0;
 }
 .dream-list {
   list-style: none;
