added logo click

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,7 +132,6 @@ label {
 #dream-editor {
   visibility: hidden;
 }
-.dream-edit-button {
-  visibility: hidden;
-  float: right;
+#logo {
+  cursor: pointer;
 }
