--- a/public/css/main.css
+++ b/public/css/main.css
@@ -95,6 +95,11 @@ label {
   margin: 8px 0 2px;
   display: block;  
 }
+.login-message {
+  display: none;
+  font-size: 17px;
+  color: rgb(243, 55, 55);
+}
 .dream-journal-list a {
   font-size: 18px;
 }
@@ -113,7 +118,7 @@ label {
 .dream-journal-containter h1 {
   display: inline;
 }
-#new-dream {
+.new-dream {
   float: right;
   margin: 5px;
 }
