--- a/public/css/main.css
+++ b/public/css/main.css
@@ -95,7 +95,7 @@ label {
   margin: 8px 0 2px;
   display: block;  
 }
-.login-message {
+.login-message, .dream-editor-message {
   display: none;
   font-size: 17px;
   color: rgb(243, 55, 55);
@@ -137,9 +137,15 @@ label {
 #dream-editor {
   visibility: hidden;
 }
+#dream-editor-text {
+  width: 100%;
+}
 .logo {
   cursor: pointer;
 }
 .dream-edit {
+  float: right;
+}
+.dream-editor-back {
   float: right;
 }
