--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,12 +22,12 @@ body {
   font-family: 'Nunito Sans', sans-serif;
 }
 header {
-  padding: 20px 0px;
+  padding: 10px 0px;
   border-bottom: 1px solid #bebebe;
 }
 header h1 {
   font-family: 'Paprika', cursive;
-  font-size: 34px;
+  font-size: 31px;
   letter-spacing: -1px;
 }
 .nav-links {
@@ -95,7 +95,7 @@ label {
   margin: 8px 0 2px;
   display: block;  
 }
-.login-message, .dream-editor-message {
+.login-message, .dream-editor-message, .dream-journal-message, .dream-detail-message {
   display: none;
   font-size: 17px;
   color: rgb(243, 55, 55);
@@ -147,8 +147,11 @@ label {
 .logo {
   cursor: pointer;
 }
-.dream-edit {
+.dream-edit, .dream-delete {
   float: right;
+}
+.dream-delete {
+  margin-left: 10px;
 }
 .dream-editor-back {
   float: right;
