--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,9 +36,13 @@ header h1 {
   right: 25px;
   list-style: none;
 }
+.nav-links li {
+  display: inline;
+}
 .nav-links a {
   text-decoration: none;
   color: black;
+  margin-left: 24px;
 }
 header .row {
   position: relative;
@@ -99,7 +103,11 @@ label {
   margin: 8px 0 2px;
   display: block;  
 }
-.login-message, .dream-editor-message, .dream-journal-message, .dream-detail-message {
+.login-message,
+.dream-editor-message,
+.dream-journal-message,
+.dream-detail-message,
+.account-create-message {
   display: none;
   font-size: 17px;
   color: rgb(243, 55, 55);
@@ -173,9 +181,16 @@ label {
 @media only screen and (max-width: 640px) {
   header h1 {
     font-size: 26px;
+    margin: 2px;
   }
   .mobile {
     display: inline;
+  }
+  .nav-links li {
+    display: block;
+  }
+  .nav-links {
+    top: -15px;
   }
   main {
     padding-top: 20px;
