--- a/public/css/main.css
+++ b/public/css/main.css
@@ -182,7 +182,8 @@ label {
 .dream-journal-message,
 .dream-detail-message,
 .create-account-message,
-.create-comment-message {
+.create-comment-message,
+.home-screen-message {
   display: none;
   font-size: 17px;
   color: rgb(243, 55, 55);
@@ -312,6 +313,12 @@ textarea {
 }
 .dream-comment-author {
   margin: 0;
+}
+.comment-delete {
+  margin: 0;
+}
+.comment-delete a {
+  color: rgb(48, 12, 167);
 }
 .comment-add-form {
   display: none;
