--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,6 +142,7 @@ ul.top-nav li a {
 }
 ul.top-nav li.icon a {
   padding: 8px 0 10px;
+  font-size: 24px;
 }
 .dreams-previous{
   margin-right: 14px;
