--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,13 +58,11 @@ main {
 }
 .container {
   margin: auto;
-  height: 100%;
+  min-height: 100%;
   background-color: #352edb;
   max-width: 1000px;
 }
 footer {
-  position: absolute;
-  bottom: 0;
   max-width: 1000px;
   margin: auto;
   width: 100%;
@@ -84,13 +82,13 @@ p {
 }
 .view {
   display: none;
+  min-height: 85vh;
 }
 footer p {
   font-size: 13px;
 }
 button {
   margin: 15px 0;
-  /* background-color: #463edf; */
   background-color: #352edb;
   padding: 0 16px;
   white-space: nowrap;
